--- a/NameAdapter/app/src/main/res/layout/name_view.xml
+++ b/NameAdapter/app/src/main/res/layout/name_view.xml
@@ -7,22 +7,24 @@
     app:cardCornerRadius="4dp">
 
     <LinearLayout
-        android:padding="4dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="4dp">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/name"
-        android:textSize="28SP"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 </android.support.v7.widget.CardView>
